Fixed spacing

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ html {
 
 p {
   color: rgb(85, 85, 85);
+  word-spacing: normal;
+  letter-spacing: normal;
 }
 
 /* TRANSITION */
